Settings: Fix initials being too small

--- a/src/dibgram/messenger/sections/settings/settings-dialog.scss
+++ b/src/dibgram/messenger/sections/settings/settings-dialog.scss
@@ -46,6 +46,11 @@
                 width: 72px;
                 display: block;
                 float: left;
+
+                .initials {
+                    font-size: 28px;
+                    font-weight: 400;
+                }
             }
 
             > span {
